--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
+    
+    - name: Install Nix
+      uses: cachix/install-nix-action@v25
       with:
+        # This ensures flakes are enabled and nixpkgs is mapped correctly
         nix_path: nixpkgs=channel:nixos-unstable
-    - uses: cachix/cachix-action@v14
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+
+    - name: Setup Cachix
+      uses: cachix/cachix-action@v14
       with:
-        name: qemu-patched # Your cache name
+        name: cmspam  # <--- DOUBLE CHECK THIS NAME
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     
-    # This updates the flake lock to the latest nixpkgs before building
     - name: Update nixpkgs
       run: nix flake update
 
     - name: Build QEMU
-      run: nix build .#default
+      # Building .#default is correct as per your flake.nix
+      run: nix build .#default --print-build-logs
