Refactor Docker build process for keyring refresh

--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -133,21 +133,27 @@ jobs:
 
       # ── Build using the CachyOS docker container ─────────────────────────────
       # --privileged avoids the kernel landlock sandbox error on GitHub runners.
-      # We refresh the keyrings by running a separate container first and
-      # committing the result, so the actual build uses the normal entrypoint
-      # untouched and has up-to-date PGP keys.
+      # We bake a keyring refresh into a new image layer using docker build so
+      # the actual build runs with the normal /run.sh entrypoint as notroot,
+      # exactly as the container is designed.
       - name: Build package
         run: |
           cd build
 
-          echo '=== Refreshing keyrings ==='
-          docker run --privileged \
-            --name qemu-keyring-refresh \
-            -v "$PWD:/pkg" \
-            "${{ matrix.docker_image }}" \
-            pacman -Sy --noconfirm archlinux-keyring cachyos-keyring 2>/dev/null || true
-          docker commit qemu-keyring-refresh qemu-build-ready
-          docker rm qemu-keyring-refresh
+          echo '=== Building image with refreshed keyrings ==='
+          DOCKER_IMAGE="${{ matrix.docker_image }}"
+
+          docker build --build-arg BASE_IMAGE="${DOCKER_IMAGE}" -t qemu-build-ready - << 'DOCKERFILE'
+          ARG BASE_IMAGE
+          FROM ${BASE_IMAGE}
+          # Receive and trust the CachyOS signing key, then refresh keyrings.
+          # This runs as root during image build, before notroot takes over.
+          RUN pacman-key --recv-keys F3B607488DB35A47 --keyserver keyserver.ubuntu.com && \
+              pacman-key --lsign-key F3B607488DB35A47 && \
+              pacman -Sy --noconfirm archlinux-keyring && \
+              pacman -U --noconfirm 'https://mirror.cachyos.org/repo/x86_64/cachyos/cachyos-keyring-20240331-1-any.pkg.tar.zst' && \
+              pacman-key --populate archlinux cachyos
+          DOCKERFILE
 
           echo '=== Starting build ==='
           docker run --rm \
