--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -249,12 +249,12 @@ jobs:
 
               echo '=== Installing build dependencies ==='
               pacman -S --noconfirm --needed base-devel
-              gpg --batch --recv-keys 3353C9CEF108B584
               echo '=== Setting up build user ==='
               useradd -m builder
               echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
               chown -R builder:builder /pkg
-
+              echo '=== Importing GPG Key ==='
+              sudo -u builder gpg --batch --keyserver hkps://keyserver.ubuntu.com --recv-keys 3353C9CEF108B584
               echo '=== Building package ==='
               cd /pkg
               sudo -u builder makepkg -sf --noconfirm
