Inject march flags into PKGBUILD script

--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -161,29 +161,33 @@ jobs:
       - name: Inject march flags into PKGBUILD
         run: |
           MARCH="${{ matrix.march_flag }}"
-          cd build
-          # Use --extra-cflags on the configure call rather than injecting into
-          # CFLAGS/CXXFLAGS globally. QEMU's configure is a meson wrapper and
-          # --extra-cflags is scoped to target compilation only — host build
-          # tools like idef-parser are compiled without it, so they can run on
-          # the GitHub runner regardless of target architecture.
-          # We use Python here because the @] in configure_options[@] causes
-          # perl to choke on the regex regardless of escaping.
-          python3 -c "
+          # Write the script to a file to avoid shell quoting issues with
+          # the @] in configure_options[@] and mixed quote types.
+          cat > /tmp/inject_march.py << 'PYEOF'
           import re, sys
+
           with open('PKGBUILD', 'r') as f:
               content = f.read()
+
           march = sys.argv[1]
-          pattern = r'(\.\./\$pkgbase-\$pkgver/configure \"\$\{configure_options\[\@\]\}\")' 
-          replacement = r'\1 --extra-cflags=\"' + march + r'\" --extra-cxxflags=\"' + march + r'\"'
+
+          # Append --extra-cflags to the regular (non-static) configure call.
+          # This is scoped by meson to target compilation only — host build
+          # tools like idef-parser are compiled without it and can run on the
+          # GitHub runner regardless of target architecture.
+          pattern = r'(\.\./\$pkgbase-\$pkgver/configure "\$\{configure_options\[\@\]\}")'
+          replacement = r'\1 --extra-cflags="' + march + r'" --extra-cxxflags="' + march + r'"'
           content, n = re.subn(pattern, replacement, content)
           if n == 0:
               print('ERROR: configure line not found in PKGBUILD')
               sys.exit(1)
+
           with open('PKGBUILD', 'w') as f:
               f.write(content)
+
           print('march flags injected:', march)
-          " "$MARCH"
+          PYEOF
+          cd build && python3 /tmp/inject_march.py "$MARCH"
           echo "=== Verification ==="
           grep "configure.*extra-cflags" PKGBUILD
 
